<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_draft"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile_draft"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_create_draft"
            android:title="@string/create" />
        <item
            android:id="@+id/nav_drafts_draft"
            android:title="@string/drafts" />
        <item
            android:id="@+id/nav_log_draft"
            android:title="@string/log" />
        <item
            android:id="@+id/nav_logout_draft"
            android:title="@string/logout" />
    </group>

</menu>