<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_create"
            android:title="@string/create" />
        <item
            android:id="@+id/nav_drafts"
            android:title="@string/drafts" />
        <item
            android:id="@+id/nav_log"
            android:title="@string/log" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

    <!-- <item android:title="@string/signature">
         <menu>
             <item
                 android:id="@+id/nav_signature"
                 android:icon="@drawable/ic_menu_share"
                 android:title="@string/add_signature" />
             <item
                 android:id="@+id/nav_view_signature"
                 android:icon="@drawable/ic_menu_send"
                 android:title="@string/view_signature" />
         </menu>
     </item> -->

</menu>